# staticserve

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
src/: args.rs  auth.rs  cache.rs  config.rs  fieldreader.rs  main.rs
