[package]
name = "staticserve"
version = "0.2.0"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2018"
description = "Static file server with ability to upload content and define dynamic routes"

[dependencies]
actix-files = "0.4.0"
actix-multipart = "0.3.0"
actix-web = { version = "3", features = ["compress", "rustls"] }
anyhow = "1.0.34"
argh = "0.1.4"
async-compression = { version="0.3.7", features=["futures-io", "zstd"] }
async-tar = "0.3.0"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
pin-project-lite = "0.2.6"
rustls = "0.18"
sanitize-filename = "0.3.0"
serde = "1.0.117"
serde_yaml = "0.8.14"
actix-token-middleware = "0.1"

[patch.crates-io]
actix-token-middleware = { git = "https://github.com/eburghar/actix-token-middleware.git", branch = "master" }
# actix-token-middleware = { path = "../actix-token-middleware" }
