[package]
name = "staticserve"
version = "0.8.1"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2021"
description = "A simple and fast async http(s) server for hosting static website (JAMSTACK) under kubernetes."

[dependencies]
actix-files = "0.6"
actix-multipart = "0.4"
actix-web = { version = "4", default-features = false, features = [
  "rustls",
  "compress-gzip",
  "compress-brotli",
] }
anyhow = "1.0"
argh = "0.1"
async-compression = { version = "0.3", features = ["futures-io", "zstd"] }
async-tar = "0.3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
rustls = "0.20"
rustls-pemfile = "1"
sanitize-filename = "0.3"
serde = "1.0"
serde_yaml = "0.8"
actix-token-middleware = "0.3"
actix-cachecontrol-middleware = "0.2"
actix-schemeredirect-middleware = "0.2"
actix-cors = "0.7.0"

[patch.crates-io]
actix-schemeredirect-middleware = { git = "https://github.com/eburghar/actix-schemeredirect-middleware.git", branch = "master" }
# actix-schemeredirect-middleware = { path = "../actix-schemeredirect-middleware" }
actix-token-middleware = { git = "https://github.com/eburghar/actix-token-middleware.git", branch = "master" }
# actix-token-middleware = { path = "../actix-token-middleware" }
actix-cachecontrol-middleware = { git = "https://github.com/eburghar/actix-cachecontrol-middleware.git", branch = "master" }
# actix-cachecontrol-middleware = { path = "../actix-cachecontrol-middleware" }
serde-vecmap = { git = "https://github.com/eburghar/serde-vecmap.git", branch = "master" }
#serde-vecmap = { path = "../serde-vecmap" }
